[package]
name = "ipr"
version = "0.1.0"
authors = ["oamam <chapa0106@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The tool to output IPv4 informations"
documentation = "https://docs.rs/ipr/"
homepage = "https://crates.io/crates/ipr"
repository = "https://github.com/oamam/ipr"
readme = "README.md"

[dependencies]
clap = "2.33.1"